Fix the permanent overflowing

--- a/src/routes/game/components/zones/permanentsZone/PermanentsZone.module.css
+++ b/src/routes/game/components/zones/permanentsZone/PermanentsZone.module.css
@@ -34,6 +34,7 @@
   min-width: 0;
   max-width: 100%;
   min-height: 0%;
+  overflow: hidden;
 }
 
 .permanentsText {
